fix to remove horizontal scrollbar at bottom of page

--- a/services/core-web/src/styles/components/NoticeOfWork.scss
+++ b/services/core-web/src/styles/components/NoticeOfWork.scss
@@ -142,7 +142,7 @@
     position: relative;
     padding-right: 20px;
     left: 250px;
-    width: calc(100vw - 250px);
+    width: calc(100vw - 270px);
 
     @include tablet {
       position: inherit;
